--- a/src/main/resources/templates/view_task.html
+++ b/src/main/resources/templates/view_task.html
@@ -15,21 +15,27 @@
     <main>
         <h1>Просмотр обращений</h1>
         <div class="recent-tasks">
-            <div th:each="task : ${tasks}">
+            <!-- Используем th:each для отображения списка обращений -->
+            <div th:each="task : ${recentTasks}">
                 <a th:href="@{/task/{id}(id=${task.id})}" class="task-item">
+                    <!-- Название задачи -->
                     <div class="task-title" th:text="${task.title}"></div>
+                    <!-- Информация о задаче с использованием статуса и даты -->
                     <div class="task-info" th:class="'status-' + ${task.status.toLowerCase()}">
-                            <span>
-                                <div class="status-icon"></div>
-                                Дата: [[${#temporals.format(task.createdAt, 'dd.MM.yyyy')}]]
-                            </span>
+                <span>
+                    <div class="status-icon"></div>
+                    <!-- Форматируем дату создания -->
+                    Дата: <span th:text="${#temporals.format(task.createdAt, 'dd.MM.yyyy')}"></span>
+                </span>
                         <span>
-                                <div class="status-icon"></div>
-                                Статус: [[${task.status}]]
-                            </span>
+                    <div class="status-icon"></div>
+                            <!-- Отображение статуса задачи -->
+                    Статус: <span th:text="${task.status}"></span>
+                </span>
                         <span>
-                                Исполнитель: [[${task.assignee}]]
-                            </span>
+                    <!-- Отображение исполнителя задачи -->
+                    Исполнитель: <span th:text="${task.assignee}"></span>
+                </span>
                     </div>
                 </a>
             </div>
