--- a/src/main/resources/templates/view_task.html
+++ b/src/main/resources/templates/view_task.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Просмотр обращений</title>
+    <title>Главная</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,35 +12,103 @@
 <div class="wrapper">
     <th:block th:replace="fragments/menu.html"></th:block>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <main>
-        <h1>Просмотр обращений</h1>
-        <div class="recent-tasks">
-            <!-- Используем th:each для отображения списка обращений -->
-            <div th:each="task : ${recentTasks}">
-                <a th:href="@{/task/{id}(id=${task.id})}" class="task-item">
-                    <!-- Название задачи -->
-                    <div class="task-title" th:text="${task.title}"></div>
-                    <!-- Информация о задаче с использованием статуса и даты -->
-                    <div class="task-info" th:class="'status-' + ${task.status.toLowerCase()}">
-                <span>
-                    <div class="status-icon"></div>
-                    <!-- Форматируем дату создания -->
-                    Дата: <span th:text="${#temporals.format(task.createdAt, 'dd.MM.yyyy')}"></span>
-                </span>
+    <h1>Просмотр обращений</h1>
+
+    <div class="recent-tasks">
+        <!-- Используем th:each для отображения списка обращений -->
+        <div th:each="task : ${recentTasks}">
+            <a th:href="@{/task/{id}(id=${task.id})}" class="task-item">
+                <!-- Название задачи -->
+                <div class="task-title" th:text="${task.title}"></div>
+                <!-- Информация о задаче с использованием статуса и даты -->
+                <div class="task-info" th:class="'status-' + ${task.status.toLowerCase()}">
                         <span>
-                    <div class="status-icon"></div>
-                            <!-- Отображение статуса задачи -->
-                    Статус: <span th:text="${task.status}"></span>
-                </span>
-                        <span>
-                    <!-- Отображение исполнителя задачи -->
-                    Исполнитель: <span th:text="${task.assignee}"></span>
-                </span>
-                    </div>
-                </a>
-            </div>
+                            <div class="status-icon"></div>
+                            <!-- Форматируем дату создания -->
+                            Дата: <span th:text="${#temporals.format(task.createdAt, 'dd.MM.yyyy')}"></span>
+                        </span>
+                    <span>
+                            <div class="status-icon"></div>
+                        <!-- Отображение статуса задачи -->
+                            Статус: <span th:text="${task.status}"></span>
+                        </span>
+                    <span>
+                            <!-- Отображение исполнителя задачи -->
+                            Исполнитель: <span th:text="${task.assignee}"></span>
+                        </span>
+                </div>
+            </a>
         </div>
+    </div>
+
+    <!-- Пагинация -->
+    <div class="pagination">
+        <a th:href="@{/view_task(page=${currentPage - 1})}" th:if="${currentPage > 1}">Предыдущая</a>
+
+        <span th:each="i : ${#numbers.sequence(1, totalPages)}"
+              th:classappend="${i == currentPage} ? 'current-page'">
+                <a th:href="@{/view_task(page=${i})}" th:text="${i}"></a>
+            </span>
+
+        <a th:href="@{/view_task(page=${currentPage + 1})}" th:if="${currentPage < totalPages}">Следующая</a>
+    </div>
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
 
 <th:block th:replace="fragments/footer.html"></th:block>
